# kusto_gen

./: .gitignore  Cargo.toml  Kql.g4  KqlTokens.g4  README.md  build.rs  package.json
.github/workflows/: ci.yml
crates/kusto_gen_cli/: Cargo.toml
crates/kusto_gen_cli/src/: main.rs
crates/kusto_gen_cli/tests/: cli_tests.rs
crates/kusto_gen_cli/tests/fixtures/: pipe.json  pipe.kql  print.json
crates/kusto_gen_core/: Cargo.toml  build.rs
crates/kusto_gen_core/src/: exec.rs  kql.l  kql.rs  kql.y  lib.rs  plan.rs
crates/kusto_gen_core/tests/: exec_tests.rs  lexer_tests.rs  parser_tests.rs  plan_tests.rs
crates/kusto_gen_web/: Cargo.toml  tailwind.config.js
crates/kusto_gen_web/src/: main.rs
examples/: README.md  basic.kql  join.kql  uc1.kql  uc2.kql  uc3.kql  uc4.kql  uc5.kql  uc6.kql
scripts/: build_web_css.ps1  build_web_css.sh  dev_web.ps1  dev_web.sh  onboard_web.ps1  onboard_web.sh
src/: kql.rs  kql.y  lib.rs  main.rs
tests/: lexer_tests.rs  parser_tests.rs
tools/: gen_kql_lrpar.py
