[package]
name = "kusto_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kusto_gen_core = { path = "../kusto_gen_core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
